--- a/my-website/index.html
+++ b/my-website/index.html
@@ -26,6 +26,7 @@
       <img src="chillflix-logo.png" alt="ChillFlix Logo" width="100" height="40" />
     </a>
     <nav class="nav-links" role="navigation" aria-label="Main Navigation">
+<a href="browse.html" class="nav-link">Browse</a>
       <a href="index.html" class="nav-link">Home</a>
       <input
         type="search"
