--- a/my-website/index.html
+++ b/my-website/index.html
@@ -45,19 +45,21 @@
   <!-- Trending Rows -->
   <main role="main">
     <section class="row" aria-labelledby="movies-heading">
-      <h2 id="movies-heading">Trending Movies</h2>
-      <div class="list" id="movies-list" role="list" aria-label="Trending Movies"></div>
-    </section>
+    <div class="row">
+    <h2>Trending Movies</h2>
+    <div class="list" id="movies-list"></div>
+  </div>
 
-    <section class="row" aria-labelledby="tvshows-heading">
-      <h2 id="tvshows-heading">Trending TV Shows</h2>
-      <div class="list" id="tvshows-list" role="list" aria-label="Trending TV Shows"></div>
-    </section>
+  <div class="row">
+    <h2>Trending TV Shows</h2>
+    <div class="list" id="tvshows-list"></div>
+  </div>
 
-    <section class="row" aria-labelledby="anime-heading">
-      <h2 id="anime-heading">Trending Anime</h2>
-      <div class="list" id="anime-list" role="list" aria-label="Trending Anime"></div>
-    </section>
+  <div class="row">
+    <h2>Trending Anime</h2>
+    <div class="list" id="anime-list"></div>
+  </div>
+      
   </main>
 
   <!-- Modal -->
