--- a/my-website/index.html
+++ b/my-website/index.html
@@ -269,6 +269,16 @@
     I Understand
   </button>
 </div>
+<div id="tracker-widget" class="tracker-widget">
+  <div class="header">🟢 <span id="online-count">0</span> online</div>
+  <div id="location-info"></div>
+  <div class="region-list" id="region-list"></div>
+</div>
+<div id="tracker-widget" class="tracker-widget">
+  <div class="header">🟢 <span id="online-count">0</span> online</div>
+  <div id="location-info"></div>
+  <div class="region-list" id="region-list"></div>
+</div>
 
 </body>
 
