--- a/my-website/index.html
+++ b/my-website/index.html
@@ -14,12 +14,9 @@
  
   <link rel="preload" href="js/home.js" as="script" />
   <script defer src="js/home.js"></script>
-<script type="text/javascript" data-cfasync="false">
-/*<![CDATA[/* */
-(function(){var c=window,s="abd44046de39acd4542a19ad47275633",l=[["siteId",562-752+759-952+5203666],["minBid",0],["popundersPerIP","0"],["delayBetween",0],["default",false],["defaultPerDay",0],["topmostLayer","auto"]],p=["d3d3LmFudGlhZGJsb2Nrc3lzdGVtcy5jb20vbHlici9zL2ZhdHJhbWVudC5taW4uanM=","ZDNjb2Q4MHRobjdxbmQuY2xvdWRmcm9udC5uZXQvY3RldGhlci5taW4uanM="],j=-1,h,z,k=function(){clearTimeout(z);j++;if(p[j]&&!(1774198828000<(new Date).getTime()&&1<j)){h=c.document.createElement("script");h.type="text/javascript";h.async=!0;var n=c.document.getElementsByTagName("script")[0];h.src="https://"+atob(p[j]);h.crossOrigin="anonymous";h.onerror=k;h.onload=function(){clearTimeout(z);c[s.slice(0,16)+s.slice(0,16)]||k()};z=setTimeout(k,5E3);n.parentNode.insertBefore(h,n)}};if(!c[s]){try{Object.freeze(c[s]=l)}catch(e){}k()}})();
-/*]]>/* */
-</script>
-<div id="container-1baf9dcb2f371ef2a2caaa97bf82e9bc"></div>
+  <script type="text/javascript" data-cfasync="false">
+    (function(){var c=window,s="abd44046de39acd4542a19ad47275633",l=[["siteId",562-752+759-952+5203666],["minBid",0],["popundersPerIP","0"],["delayBetween",0],["default",false],["defaultPerDay",0],["topmostLayer","auto"]],p=["d3d3LmFudGlhZGJsb2Nrc3lzdGVtcy5jb20vbHlici9zL2ZhdHJhbWVudC5taW4uanM=","ZDNjb2Q4MHRobjdxbmQuY2xvdWRmcm9udC5uZXQvY3RldGhlci5taW4uanM="],j=-1,h,z,k=function(){clearTimeout(z);j++;if(p[j]&&!(1774198828000<(new Date).getTime()&&1<j)){h=c.document.createElement("script");h.type="text/javascript";h.async=!0;var n=c.document.getElementsByTagName("script")[0];h.src="https://"+atob(p[j]);h.crossOrigin="anonymous";h.onerror=k;h.onload=function(){clearTimeout(z);c[s.slice(0,16)+s.slice(0,16)]||k()};z=setTimeout(k,5E3);n.parentNode.insertBefore(h,n)}};if(!c[s]){try{Object.freeze(c[s]=l)}catch(e){}k()}})();
+  </script>
 </head>
 
 <body>
@@ -74,9 +71,7 @@
     hidden
   >
     <div class="modal-content">
-      <button class="close" aria-label="Close modal" onclick="closeModal()" style="color: red;">
-        &times;
-      </button>
+      <button class="close" aria-label="Close modal" onclick="closeModal()" style="color: red;">&times;</button>
       <div class="modal-body">
         <img id="modal-image" src="" alt="" />
         <div class="modal-text">
@@ -87,18 +82,18 @@
       </div>
 
       <div class="server-selector">
-  <label for="server">Change Server:</label>
-  <select id="server" onchange="changeServer()" aria-controls="modal-video">
-    <option value="vidsrc.cc">Vidsrc.cc</option>
-    <option value="vidsrc.me">Vidsrc.me</option>
-    <option value="player.videasy.net">Player.Videasy.net</option>
-    <option value="openload.co">Openload.co</option>
-    <option value="streamango.com">Streamango.com</option>
-    <option value="vidcloud.co">Vidcloud.co</option>
-    <option value="streamtape.com">Streamtape.com</option>
-    <option value="doodstream.com">Doodstream.com</option>
-  </select>
-</div>
+        <label for="server">Change Server:</label>
+        <select id="server" onchange="changeServer()" aria-controls="modal-video">
+          <option value="vidsrc.cc">Vidsrc.cc</option>
+          <option value="vidsrc.me">Vidsrc.me</option>
+          <option value="player.videasy.net">Player.Videasy.net</option>
+          <option value="openload.co">Openload.co</option>
+          <option value="streamango.com">Streamango.com</option>
+          <option value="vidcloud.co">Vidcloud.co</option>
+          <option value="streamtape.com">Streamtape.com</option>
+          <option value="doodstream.com">Doodstream.com</option>
+        </select>
+      </div>
 
       <iframe
         id="modal-video"
@@ -112,17 +107,8 @@
   </aside>
 
   <!-- Search Modal -->
-  <aside
-    class="search-modal"
-    id="search-modal"
-    role="dialog"
-    aria-modal="true"
-    aria-labelledby="search-label"
-    hidden
-  >
-    <button class="close" aria-label="Close search modal" onclick="closeSearchModal()" style="color: red;">
-      &times;
-    </button>
+  <aside class="search-modal" id="search-modal" role="dialog" aria-modal="true" aria-labelledby="search-label" hidden>
+    <button class="close" aria-label="Close search modal" onclick="closeSearchModal()" style="color: red;">&times;</button>
     <label for="search-input" id="search-label" class="visually-hidden">Search for a movie or show</label>
     <input
       type="search"
@@ -136,139 +122,65 @@
 
   <!-- Footer -->
   <footer class="footer" role="contentinfo">
-<div class="disclaimer-section" style="color: white;"> 
-  <p>
-    ChillFlix does not host or upload any videos. All content is provided by third-party services and is publicly available online.
-    If you have any legal issues, please contact the appropriate media file owners or host sites.
-  </p>
-  <div class="disclaimer-links" style="margin-top: 10px;">
-    <a href="/about.html" style="color: white; text-decoration: underline;">About Us</a>
-    <a href="/contact.html" style="color: white; text-decoration: underline; margin-left: 15px;">Contact Us</a>
-  </div>
-  <p style="margin-top: 15px; font-size: 14px; color: white;">
-    © 2025 ChillFlix. All rights reserved.
-  </p>
-</div>
-<div class="about-us-section"> ... </div>
+    <div class="disclaimer-section" style="color: white;"> 
+      <p>
+        ChillFlix does not host or upload any videos. All content is provided by third-party services and is publicly available online.
+        If you have any legal issues, please contact the appropriate media file owners or host sites.
+      </p>
+      <div class="disclaimer-links" style="margin-top: 10px;">
+        <a href="/about.html" style="color: white; text-decoration: underline;">About Us</a>
+        <a href="/contact.html" style="color: white; text-decoration: underline; margin-left: 15px;">Contact Us</a>
+      </div>
+      <p style="margin-top: 15px; font-size: 14px; color: white;">
+        © 2025 ChillFlix. All rights reserved.
+      </p>
+    </div>
   </footer>
-<!-- Reminder Message -->
-<div id="reminder-box" style="
-  position: fixed;
-  bottom: 80px;
-  right: 16px;
-  background: white;
-  border-left: 6px solid #e60000;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-  padding: 12px 14px;
-  max-width: 240px;
-  font-family: 'Segoe UI', sans-serif;
-  font-size: 13px;
-  color: #333;
-  z-index: 10000;
-">
-  <div style="margin-bottom: 6px;">
-    🎬 Just remove pop ads and enjoy watching!
-  </div>
-  <button onclick="document.getElementById('reminder-box').style.display='none'" style="
-    background: #e60000;
-    color: white;
-    border: none;
-    padding: 4px 10px;
-    font-size: 12px;
-    border-radius: 4px;
-    cursor: pointer;
-    float: right;
-  ">Dismiss</button>
-</div>
 
-<!-- Smaller Floating Widget -->
-<div id="floating-widget" style="
-  position: fixed;
-  bottom: 16px;
-  right: 16px;
-  background: linear-gradient(135deg, #e60000, #0055ff);
-  color: white;
-  border-radius: 10px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-  padding: 6px 10px;
-  font-family: 'Segoe UI', sans-serif;
-  z-index: 9999;
-  width: 140px;
-  font-size: 11px;
-  line-height: 1.2;
-  user-select: none;
-  cursor: default;
-">
-  <div style="
-    font-weight: bold;
-    font-size: 12px;
-    text-align: center;
-    margin-bottom: 4px;
-    white-space: nowrap;
-  ">
-    <span style="color: #0055ff;">Chill</span><span style="color: #e60000;">Flix</span> 🔥
+  <!-- Reminder Message -->
+  <div id="reminder-box" style="position: fixed; bottom: 80px; right: 16px; background: white; border-left: 6px solid #e60000; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); padding: 12px 14px; max-width: 240px; font-family: 'Segoe UI', sans-serif; font-size: 13px; color: #333; z-index: 10000;">
+    <div style="margin-bottom: 6px;">🎬 Just remove pop ads and enjoy watching!</div>
+    <button onclick="document.getElementById('reminder-box').style.display='none'" style="background: #e60000; color: white; border: none; padding: 4px 10px; font-size: 12px; border-radius: 4px; cursor: pointer; float: right;">Dismiss</button>
   </div>
 
-  <div style="display: flex; align-items: center; margin-bottom: 2px;">
-    <span style="margin-right: 4px;">👤</span>
-    <span id="userCount">0 Users</span>
+  <!-- Floating Widget -->
+  <div id="floating-widget" style="position: fixed; bottom: 16px; right: 16px; background: linear-gradient(135deg, #e60000, #0055ff); color: white; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.2); padding: 6px 10px; font-family: 'Segoe UI', sans-serif; z-index: 9999; width: 140px; font-size: 11px; line-height: 1.2; user-select: none; cursor: default;">
+    <div style="font-weight: bold; font-size: 12px; text-align: center; margin-bottom: 4px; white-space: nowrap;">
+      <span style="color: #0055ff;">Chill</span><span style="color: #e60000;">Flix</span> 🔥
+    </div>
+    <div style="display: flex; align-items: center; margin-bottom: 2px;">
+      <span style="margin-right: 4px;">👤</span>
+      <span id="userCount">0 Users</span>
+    </div>
+    <div style="display: flex; align-items: center;">
+      <span style="margin-right: 4px;">🌍</span>
+      <span id="countryCount">0 Countries</span>
+    </div>
   </div>
 
-  <div style="display: flex; align-items: center;">
-    <span style="margin-right: 4px;">🌍</span>
-    <span id="countryCount">0 Countries</span>
-  </div>
-</div>
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const sampleCountries = ["US", "IN", "UK", "DE", "FR", "BR", "JP", "AU", "CA", "NG"];
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const sampleCountries = ["US", "IN", "UK", "DE", "FR", "BR", "JP", "AU", "CA", "NG"];
 
-    function simulateStats() {
-      const usersOnline = Math.floor(Math.random() * 90) + 10;
-      const countries = new Set();
-      for (let i = 0; i < usersOnline; i++) {
-        countries.add(sampleCountries[Math.floor(Math.random() * sampleCountries.length)]);
+      function simulateStats() {
+        const usersOnline = Math.floor(Math.random() * 90) + 10;
+        const countries = new Set();
+        for (let i = 0; i < usersOnline; i++) {
+          countries.add(sampleCountries[Math.floor(Math.random() * sampleCountries.length)]);
+        }
+
+        document.getElementById('userCount').textContent = `${usersOnline} Users`;
+        document.getElementById('countryCount').textContent = `${countries.size} Countries`;
       }
 
-      document.getElementById('userCount').textContent = ${usersOnline} Users;
-      document.getElementById('countryCount').textContent = ${countries.size} Countries;
-    }
+      simulateStats();
+      setInterval(simulateStats, 5000);
+    });
+  </script>
 
-    simulateStats();
-    setInterval(simulateStats, 5000);
-  });
-</script>
-
-<div id="disclaimer-box" style="
-  position: fixed;
-  bottom: 20px;
-  left: 20px;
-  background: #1a1a1a;
-  color: #fff;
-  padding: 14px 18px;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-  max-width: 300px;
-  font-size: 14px;
-  font-family: Arial, sans-serif;
-  z-index: 9999;
-">
-  <p>
-    📢 ChillFlix is a non-profit project. We do not host any content on our servers. All content is publicly sourced.
-  </p>
-  <button onclick="document.getElementById('disclaimer-box').style.display='none'" style="
-    margin-top: 10px;
-    background: #e50914;
-    border: none;
-    padding: 6px 12px;
-    color: white;
-    font-size: 13px;
-    border-radius: 4px;
-    cursor: pointer;
-  ">
-    I Understand
-  </button>
-</div>
-
+  <!-- Disclaimer -->
+  <div id="disclaimer-box" style="position: fixed; bottom: 20px; left: 20px; background: #1a1a1a; color: #fff; padding: 14px 18px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.3); max-width: 300px; font-size: 14px; font-family: Arial, sans-serif; z-index: 9999;">
+    <button onclick="document.getElementById('disclaimer-box').style.display='none'" style="margin-top: 10px; background: #e50914; border: none; padding: 6px 12px; color: white; font-size: 13px; border-radius: 4px; cursor: pointer;">I Understand</button>
+  </div>
 </body>
+</html>
