--- a/my-website/index.html
+++ b/my-website/index.html
@@ -173,6 +173,16 @@
     });
   </script>
 
+<!-- Chatroom Widget -->
+<div id="chat-container">
+  <div id="chat-header" onclick="toggleChat()">
+    💬 ChillFlix Chatroom
+  </div>
+  <div id="chat-body">
+    <div id="chat-messages"></div>
+    <input type="text" id="chat-input" placeholder="Type your message..." onkeydown="sendMessage(event)" />
+  </div>
+</div>
 
 </body>
 </html>
