--- a/my-website/index.html
+++ b/my-website/index.html
@@ -183,6 +183,48 @@
     <input type="text" id="chat-input" placeholder="Type your message..." onkeydown="sendMessage(event)" />
   </div>
 </div>
+<!-- Firebase App (the core Firebase SDK) -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+
+<script>
+  // Replace with your Firebase project config
+  const firebaseConfig = {
+    apiKey: "YOUR_API_KEY",
+    authDomain: "YOUR_DOMAIN",
+    projectId: "YOUR_PROJECT_ID",
+    storageBucket: "YOUR_BUCKET",
+    messagingSenderId: "YOUR_SENDER_ID",
+    appId: "YOUR_APP_ID",
+    databaseURL: "YOUR_DB_URL"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
+
+  function sendMessage(event) {
+    if (event.key === "Enter") {
+      const input = document.getElementById('chat-input');
+      const message = input.value.trim();
+      if (message !== "") {
+        db.ref('chat').push({ text: message, time: Date.now() });
+        input.value = "";
+      }
+    }
+  }
+
+  function toggleChat() {
+    const body = document.getElementById("chat-body");
+    body.style.display = body.style.display === "none" ? "flex" : "none";
+  }
+
+  db.ref('chat').on('child_added', snapshot => {
+    const msg = snapshot.val();
+    const msgDiv = document.createElement("div");
+    msgDiv.textContent = msg.text;
+    document.getElementById("chat-messages").appendChild(msgDiv);
+  });
+</script>
 
 </body>
 </html>
