--- a/my-website/index.html
+++ b/my-website/index.html
@@ -38,9 +38,32 @@
   </header>
 
   <!-- Banner -->
-  <section class="banner" id="banner" role="region" aria-live="polite">
-    <h1 id="banner-title"></h1>
-  </section>
+  <section class="slideshow-banner" role="region" aria-live="polite">
+ <div class="slide fade">
+    <img src="https://image.tmdb.org/t/p/original/jFK2ZLQUzo9pea0jfMCHDfvWsx7.jpg" alt="Godzilla x Kong: The New Empire" />
+    <div class="slide-caption">
+      <h2>Godzilla x Kong: The New Empire</h2>
+      <p>The two ancient titans must unite against a new global threat.</p>
+      <button onclick="playVideo('https://vidsrc.to/embed/movie/tt14539740')">▶ Watch</button>
+    </div>
+  </div>
+ div class="slide fade">
+    <img src="https://image.tmdb.org/t/p/original/fypydCipcWDKDTTCoPucBsdGYXf.jpg" alt="The Fall Guy" />
+    <div class="slide-caption">
+      <h2>The Fall Guy</h2>
+      <p>A stuntman gets pulled into a criminal conspiracy while trying to win back his ex.</p>
+      <button onclick="playVideo('https://vidsrc.to/embed/movie/tt1684562')">▶ Watch</button>
+    </div>
+  </div>
+  <div class="slide fade">
+    <img src="https://image.tmdb.org/t/p/original/xOMo8BRK7PfcJv9JCnx7s5hj0PX.jpg" alt="Dune: Part Two" />
+    <div class="slide-caption">
+      <h2>Dune: Part Two</h2>
+      <p>Paul Atreides unites with the Fremen to wage war against House Harkonnen.</p>
+      <button onclick="playVideo('https://vidsrc.to/embed/movie/tt15239678')">▶ Watch</button>
+    </div>
+  </div>
+</section>
 
   <!-- Trending Rows -->
   <main role="main">
