--- a/public/chat.html
+++ b/public/chat.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="/css/home.css" />
   <title>ChillFlix Chatroom</title>
   <style>
     body { font-family: sans-serif; background: #111; color: white; }
