--- a/my-website/index.html
+++ b/my-website/index.html
@@ -20,11 +20,11 @@
 </head>
 
 <body>
-<a href="https://chillflix-axzx.onrender.com/chat.html" target="_blank">
-  <button style="padding: 10px 20px; background-color: #e50914; color: white; border: none; border-radius: 5px; cursor: pointer;">
-    💬 Join ChillFlix Chatroom
-  </button>
-</a>
+<h2>💬 ChillFlix Chatroom</h2>
+<iframe 
+  src="https://chillflix-axzx.onrender.com/chat.html"
+  style="width: 100%; height: 500px; border: none; border-radius: 10px;">
+</iframe>
   <!-- Navbar -->
   <header class="navbar" role="banner">
     <a href="index.html" class="logo" aria-label="ChillFlix Home">
