--- a/public/chat.html
+++ b/public/chat.html
@@ -2,35 +2,63 @@
 <html>
 <head>
   <title>ChillFlix Chatroom</title>
+  <link rel="stylesheet" href="/css/home.css" />
   <style>
     body { font-family: sans-serif; background: #111; color: white; }
     #chat { max-width: 600px; margin: 50px auto; }
     ul { list-style: none; padding: 0; }
     li { margin: 10px 0; background: #222; padding: 10px; border-radius: 8px; }
-    input { width: 80%; padding: 10px; }
-    button { padding: 10px; }
-<link rel="stylesheet" href="/css/home.css" />
+    input {
+      width: 80%;
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      background: #333;
+      color: white;
+    }
+    button {
+      padding: 10px;
+      background-color: #e50914;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #f6121d;
+    }
   </style>
 </head>
 <body>
   <div id="chat">
-    <h2>ChillFlix Chatroom</h2>
+    <h2>💬 ChillFlix Chatroom</h2>
     <ul id="messages"></ul>
     <input id="m" autocomplete="off" placeholder="Type your message..." />
-    <button>Send</button>
+    <button id="send">Send</button>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    const btn = document.querySelector('button');
+    const btn = document.getElementById('send');
     const input = document.getElementById('m');
     const messages = document.getElementById('messages');
 
-    btn.addEventListener('click', () => {
-      if (input.value) {
-        socket.emit('chat message', input.value);
+    function sendMessage() {
+      const message = input.value.trim();
+      if (message !== '') {
+        socket.emit('chat message', message);
         input.value = '';
+      }
+    }
+
+    btn.addEventListener('click', sendMessage);
+
+    input.addEventListener('keydown', function (event) {
+      // Press Enter without Shift to send
+      if (event.key === 'Enter' && !event.shiftKey) {
+        event.preventDefault();
+        sendMessage();
       }
     });
 
@@ -38,7 +66,9 @@
       const item = document.createElement('li');
       item.textContent = msg;
       messages.appendChild(item);
+      messages.scrollTop = messages.scrollHeight; // auto scroll to bottom
     });
   </script>
 </body>
 </html>
+
